3.4.0 b622
* added chunk kill feature